--- a/client/src/css/AptListingRatings.css
+++ b/client/src/css/AptListingRatings.css
@@ -36,6 +36,8 @@ p {
 
 .rating-info {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     font-weight: bold;
     font-size: 18px;
 }
